# onnxsandbox

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  justfile  onnxsandbox.sublime-project  vcpkg.json
src/: CMakeLists.txt  unittests.cc  unittests_main.cc
src/base/: CMakeLists.txt  allocation.cc  allocation.h  allocation_size.cc  allocation_size.h  allocation_size_unittests.cc  backend_cast.h  base_unittests.cc  comparable.cc  comparable.h  config.h  flags.h  mask.h  promise.cc  promise.h  strings.cc  strings.h  thread.cc  thread.h  thread_safety.cc  thread_safety.h  timing.h  validation.cc  validation.h  version.cc  version.h
src/core/: CMakeLists.txt  allocator.cc  allocator.h  allocator_unittests.cc  buffer_view.cc  buffer_view.h  buffer_view_unittests.cc  device_buffer.cc  device_buffer.h  device_buffer_descriptor.cc  device_buffer_descriptor.h  formats.cc  formats.h  host_buffer.cc  host_buffer.h  idle_waiter.h  range.cc  range.h  raw_ptr.cc  raw_ptr.h  resource_binder.cc  resource_binder.h  runtime_types.cc  runtime_types.h  sampler.cc  sampler.h  sampler_descriptor.cc  sampler_descriptor.h  shader_types.cc  shader_types.h  texture.cc  texture.h  texture_descriptor.cc  texture_descriptor.h  vertex_buffer.cc  vertex_buffer.h
src/ep/: CMakeLists.txt  unittests.cc
src/fml/: CMakeLists.txt  ascii_trie.cc  ascii_trie.h  backtrace.cc  backtrace.h  base32.h  build_config.h  closure.h  command_line.h  concurrent_message_loop.cc  concurrent_message_loop.h  container.h  cpu_affinity.cc  cpu_affinity.h  delayed_task.h  eintr_wrapper.h  endianness.h  endianness_unittests.cc  file.cc  file.h  hash_combine.h  hash_combine_unittests.cc  hex_codec.h  icu_util.cc  icu_util.h  log_level.h  log_settings.h  logging.h  logging_unittests.cc  macros.h  make_copyable.h  mapping.cc  mapping.h  mapping_unittests.cc  math.h  message_loop.cc  message_loop.h  message_loop_impl.cc  message_loop_impl.h  message_loop_task_queues.cc  (+25 more)
src/fml/memory/: ref_counted.h  ref_counted_internal.h  ref_counted_unittest.cc  ref_ptr.h  ref_ptr_internal.h  task_runner_checker.cc  task_runner_checker.h  thread_checker.h  weak_ptr.h  weak_ptr_internal.cc  weak_ptr_internal.h
src/fml/platform/android/: cpu_affinity.cc  cpu_affinity.h  jni_util.cc  jni_util.h  jni_weak_ref.cc  jni_weak_ref.h  message_loop_android.cc  message_loop_android.h  paths_android.h  scoped_java_ref.cc  scoped_java_ref.h
src/fml/platform/darwin/: cf_utils.h  cf_utils_unittests.mm  message_loop_darwin.h  platform_version.h  scoped_nsautorelease_pool.h  string_range_sanitization.h
src/fml/platform/fuchsia/: message_loop_fuchsia.cc  message_loop_fuchsia.h  task_observers.h
src/fml/platform/linux/: message_loop_linux.cc  message_loop_linux.h  timerfd.cc  timerfd.h
src/fml/platform/posix/: file_posix.cc  native_library_posix.cc  paths_posix.cc
src/fml/platform/win/: errors_win.h  file_win.cc  mapping_win.cc  message_loop_win.cc  message_loop_win.h  windows_shim.h  wstring_conversion.h
src/fml/synchronization/: atomic_object.h  count_down_latch.h  count_down_latch_unittests.cc  semaphore.cc  semaphore.h  sync_switch.h  waitable_event.cc  waitable_event.h
src/fml/time/: chrono_timestamp_provider.h  time_delta.h  time_point.h  time_point_unittest.cc  timestamp_provider.h
src/geometry/: CMakeLists.txt  arc.cc  arc.h  arc_unittests.cc  color.cc  color.h  constants.cc  constants.h  dashed_line_path_source.cc  dashed_line_path_source.h  geometry_asserts.h  geometry_benchmarks.cc  geometry_unittests.cc  gradient.cc  gradient.h  half.h  matrix.cc  matrix.h  matrix_decomposition.cc  matrix_decomposition.h  matrix_unittests.cc  path_source.cc  path_source.h  path_source_unittests.cc  point.cc  point.h  point_unittests.cc  quaternion.cc  quaternion.h  rational.cc  rational.h  rational_unittests.cc  rect.cc  rect.h  rect_unittests.cc  round_rect.cc  round_rect.h  round_rect_unittests.cc  round_superellipse.cc  round_superellipse.h  (+33 more)
src/hal/: CMakeLists.txt  allocator_vk.cc  allocator_vk.h  barrier_vk.cc  barrier_vk.h  blit_command.cc  blit_command.h  blit_pass_vk.cc  blit_pass_vk.h  capabilities_vk.cc  capabilities_vk.h  command.cc  command.h  command_buffer_vk.cc  command_buffer_vk.h  command_pool_vk.cc  command_pool_vk.h  command_queue_vk.cc  command_queue_vk.h  compute_pass_vk.cc  compute_pass_vk.h  compute_pipeline_builder.cc  compute_pipeline_builder.h  compute_pipeline_descriptor.cc  compute_pipeline_vk.cc  compute_pipeline_vk.h  context_vk.cc  context_vk.h  debug_report_vk.cc  debug_report_vk.h  descriptor_pool_vk.cc  descriptor_pool_vk.h  device_buffer_vk.cc  device_buffer_vk.h  device_holder_vk.h  driver_info_vk.cc  driver_info_vk.h  fence_waiter_vk.cc  fence_waiter_vk.h  formats_vk.cc  (+70 more)
src/hal/android/: ahb_texture_source_vk.cc  ahb_texture_source_vk.h
src/hal/swapchain/: surface_vk.cc  surface_vk.h  swapchain_transients_vk.cc  swapchain_transients_vk.h  swapchain_vk.cc  swapchain_vk.h
src/hal/swapchain/ahb/: ahb_swapchain_impl_vk.cc  ahb_swapchain_impl_vk.h  ahb_swapchain_vk.cc  ahb_swapchain_vk.h  ahb_texture_pool_vk.cc  (+3 more)
src/renderer/: CMakeLists.txt  allocator_vk.cc  allocator_vk.h  barrier_vk.cc  barrier_vk.h  blit_command.cc  blit_command.h  blit_pass.cc  blit_pass.h  blit_pass_unittests.cc  blit_pass_vk.cc  blit_pass_vk.h  capabilities.cc  capabilities.h  capabilities_unittests.cc  capabilities_vk.cc  capabilities_vk.h  command.cc  command.h  command_buffer.cc  command_buffer.h  command_buffer_vk.cc  command_buffer_vk.h  command_pool_vk.cc  command_pool_vk.h  command_queue.cc  command_queue.h  command_queue_vk.cc  command_queue_vk.h  compute_pass.cc  compute_pass.h  compute_pass_vk.cc  compute_pass_vk.h  compute_pipeline_builder.cc  compute_pipeline_builder.h  compute_pipeline_descriptor.cc  compute_pipeline_descriptor.h  compute_pipeline_vk.cc  compute_pipeline_vk.h  compute_unittests.cc  (+104 more)
src/renderer/android/: ahb_texture_source_vk.cc  ahb_texture_source_vk.h
src/renderer/swapchain/: surface_vk.cc  surface_vk.h  swapchain_transients_vk.cc  swapchain_vk.cc  swapchain_vk.h
src/renderer/testing/: mocks.h
(+150 files in other folders)
