add_library(fml OBJECT
  ascii_trie.cc
  ascii_trie.h
  backtrace.h
  base32.cc
  base32.h
  build_config.h
  closure.h
  concurrent_message_loop.cc
  concurrent_message_loop.h
  container.h
  cpu_affinity.cc
  cpu_affinity.h
  delayed_task.cc
  delayed_task.h
  eintr_wrapper.h
  endianness.cc
  endianness.h
  file.cc
  file.h
  hash_combine.h
  hex_codec.cc
  hex_codec.h
  log_level.h
  log_settings.cc
  log_settings.h
  log_settings_state.cc
  logging.cc
  logging.h
  make_copyable.h
  mapping.cc
  mapping.h
  math.h
  memory/ref_counted.h
  memory/ref_counted_internal.h
  memory/ref_ptr.h
  memory/ref_ptr_internal.h
  memory/task_runner_checker.cc
  memory/task_runner_checker.h
  memory/thread_checker.cc
  memory/thread_checker.h
  memory/weak_ptr.h
  memory/weak_ptr_internal.cc
  memory/weak_ptr_internal.h
  message_loop.cc
  message_loop.h
  message_loop_impl.cc
  message_loop_impl.h
  message_loop_task_queues.cc
  message_loop_task_queues.h
  native_library.h
  paths.cc
  paths.h
  posix_wrappers.h
  process.h
  raster_thread_merger.cc
  raster_thread_merger.h
  shared_thread_merger.cc
  shared_thread_merger.h
  status.h
  status_or.h
  synchronization/atomic_object.h
  synchronization/count_down_latch.cc
  synchronization/count_down_latch.h
  synchronization/semaphore.cc
  synchronization/semaphore.h
  synchronization/sync_switch.cc
  synchronization/sync_switch.h
  synchronization/waitable_event.cc
  synchronization/waitable_event.h
  task_queue_id.h
  task_runner.cc
  task_runner.h
  task_source.cc
  task_source.h
  thread.cc
  thread.h
  time/time_delta.h
  time/time_point.cc
  time/time_point.h
  time/timestamp_provider.h
  trace_event.cc
  trace_event.h
  unique_fd.cc
  unique_fd.h
  unique_object.h
  wakeable.h
)
