add_library(fml
  ascii_trie.cc
  ascii_trie.h
  backtrace.h
  base32.cc
  base32.h
  build_config.h
  closure.h
  concurrent_message_loop.cc
  concurrent_message_loop.h
  container.h
  cpu_affinity.cc
  cpu_affinity.h
  delayed_task.cc
  delayed_task.h
  eintr_wrapper.h
  endianness.cc
  endianness.h
  file.cc
  file.h
  hash_combine.h
  hex_codec.cc
  hex_codec.h
  log_level.h
  log_settings.cc
  log_settings.h
  log_settings_state.cc
  logging.cc
  logging.h
  make_copyable.h
  mapping.cc
  mapping.h
  math.h
  memory/ref_counted.h
  memory/ref_counted_internal.h
  memory/ref_ptr.h
  memory/ref_ptr_internal.h
  memory/task_runner_checker.cc
  memory/task_runner_checker.h
  memory/thread_checker.cc
  memory/thread_checker.h
  memory/weak_ptr.h
  memory/weak_ptr_internal.cc
  memory/weak_ptr_internal.h
  message_loop.cc
  message_loop.h
  message_loop_impl.cc
  message_loop_impl.h
  message_loop_task_queues.cc
  message_loop_task_queues.h
  native_library.h
  paths.cc
  paths.h
  posix_wrappers.h
  process.h
  raster_thread_merger.cc
  raster_thread_merger.h
  shared_thread_merger.cc
  shared_thread_merger.h
  status.h
  status_or.h
  synchronization/atomic_object.h
  synchronization/count_down_latch.cc
  synchronization/count_down_latch.h
  synchronization/semaphore.cc
  synchronization/semaphore.h
  synchronization/sync_switch.cc
  synchronization/sync_switch.h
  synchronization/waitable_event.cc
  synchronization/waitable_event.h
  task_queue_id.h
  task_runner.cc
  task_runner.h
  task_source.cc
  task_source.h
  thread.cc
  thread.h
  time/time_delta.h
  time/time_point.cc
  time/time_point.h
  time/timestamp_provider.h
  trace_event.cc
  trace_event.h
  unique_fd.cc
  unique_fd.h
  unique_object.h
  wakeable.h
  command_line.cc
  command_line.h
  backtrace_stub.cc
  string_conversion.cc
  string_conversion.h
  platform/posix/command_line_posix.cc
  platform/posix/file_posix.cc
  platform/posix/mapping_posix.cc
  platform/posix/native_library_posix.cc
  platform/posix/paths_posix.cc
  platform/posix/posix_wrappers_posix.cc
  platform/posix/process_posix.cc
)

target_compile_definitions(fml PUBLIC
  _SILENCE_CXX17_CODECVT_HEADER_DEPRECATION_WARNING
  _LIBCPP_DISABLE_DEPRECATION_WARNINGS
)

if (APPLE)
target_sources(fml PRIVATE
  platform/darwin/cf_utils.cc
  platform/darwin/cf_utils.h
  platform/darwin/concurrent_message_loop_factory.mm
  platform/darwin/message_loop_darwin.h
  platform/darwin/message_loop_darwin.mm
  platform/darwin/paths_darwin.mm
  platform/darwin/platform_version.h
  platform/darwin/platform_version.mm
  platform/darwin/scoped_nsautorelease_pool.cc
  platform/darwin/scoped_nsautorelease_pool.h
  platform/darwin/string_range_sanitization.h
  platform/darwin/string_range_sanitization.mm
)
elseif (UNIX)
target_sources(fml PRIVATE
  concurrent_message_loop_factory.cc
  platform/linux/message_loop_linux.cc
  platform/linux/message_loop_linux.h
  platform/linux/paths_linux.cc
  platform/linux/timerfd.cc
  platform/linux/timerfd.h
)
endif()

target_include_directories(fml PUBLIC ..)

add_library(fml_unittests OBJECT
  ascii_trie_unittests.cc
  backtrace_unittests.cc
  base32_unittest.cc
  closure_unittests.cc
  command_line_unittest.cc
  container_unittests.cc
  cpu_affinity_unittests.cc
  endianness_unittests.cc
  file_unittest.cc
  hash_combine_unittests.cc
  hex_codec_unittest.cc
  logging_unittests.cc
  mapping_unittests.cc
  math_unittests.cc
  memory/ref_counted_unittest.cc
  memory/task_runner_checker_unittest.cc
  memory/weak_ptr_unittest.cc
  message_loop_task_queues_merge_unmerge_unittests.cc
  message_loop_task_queues_unittests.cc
  message_loop_unittests.cc
  paths_unittests.cc
  raster_thread_merger_unittests.cc
  string_conversion_unittests.cc
  synchronization/count_down_latch_unittests.cc
  synchronization/semaphore_unittest.cc
  synchronization/sync_switch_unittest.cc
  synchronization/waitable_event_unittest.cc
  task_source_unittests.cc
  thread_unittests.cc
  time/chrono_timestamp_provider.cc
  time/chrono_timestamp_provider.h
  time/time_delta_unittest.cc
  time/time_point_unittest.cc
  time/time_unittest.cc
)

target_link_libraries(fml_unittests PUBLIC fml GTest::gtest)
