add_library(geometry
  arc.cc
  arc.h
  color.cc
  color.h
  constants.cc
  constants.h
  dashed_line_path_source.cc
  dashed_line_path_source.h
  gradient.cc
  gradient.h
  half.h
  matrix.cc
  matrix.h
  matrix_decomposition.cc
  matrix_decomposition.h
  path_source.cc
  path_source.h
  point.cc
  point.h
  quaternion.cc
  quaternion.h
  rational.cc
  rational.h
  rect.cc
  rect.h
  round_rect.cc
  round_rect.h
  round_superellipse.cc
  round_superellipse.h
  round_superellipse_param.cc
  round_superellipse_param.h
  rounding_radii.cc
  rounding_radii.h
  rstransform.cc
  rstransform.h
  saturated_math.h
  scalar.h
  separated_vector.cc
  separated_vector.h
  shear.cc
  shear.h
  sigma.cc
  sigma.h
  size.cc
  size.h
  trig.cc
  trig.h
  type_traits.cc
  type_traits.h
  vector.cc
  vector.h
  wangs_formula.cc
  wangs_formula.h
)

target_include_directories(geometry PUBLIC ..)

add_library(geometry_unittests OBJECT
  geometry_unittests.cc
  matrix_unittests.cc
  point_unittests.cc
  rational_unittests.cc
  rect_unittests.cc
  round_rect_unittests.cc
  round_superellipse_unittests.cc
  rounding_radii_unittests.cc
  rstransform_unittests.cc
  saturated_math_unittests.cc
  size_unittests.cc
  trig_unittests.cc
  wangs_formula_unittests.cc
)

target_link_libraries(geometry_unittests PUBLIC geometry GTest::gtest)
