add_library(renderer
  backend/vulkan/idle_waiter_vk.h
  blit_command.cc
  blit_command.h
  host_buffer.cc
  host_buffer.h
  command.cc
  command.h
  compute_pipeline_builder.cc
  compute_pipeline_builder.h
  compute_pipeline_descriptor.cc
  compute_pipeline_descriptor.h
  pipeline.cc
  pipeline.h
  pipeline_builder.cc
  pipeline_builder.h
  pipeline_compile_queue.cc
  pipeline_compile_queue.h
  resource_binder.cc
  resource_binder.h
  pipeline_descriptor.cc
  pipeline_descriptor.h
  pool.h
  render_target.cc
  render_target.h
  shader_key.cc
  shader_key.h
  snapshot.cc
  snapshot.h
  texture_util.cc
  texture_util.h
  vertex_buffer_builder.cc
  vertex_buffer_builder.h
  vertex_descriptor.cc
  vertex_descriptor.h
  backend/vulkan/allocator_vk.cc
  backend/vulkan/allocator_vk.h
  backend/vulkan/barrier_vk.cc
  backend/vulkan/barrier_vk.h
  backend/vulkan/blit_pass_vk.cc
  backend/vulkan/blit_pass_vk.h
  backend/vulkan/capabilities_vk.cc
  backend/vulkan/capabilities_vk.h
  backend/vulkan/command_buffer_vk.cc
  backend/vulkan/command_buffer_vk.h
  backend/vulkan/command_pool_vk.cc
  backend/vulkan/command_pool_vk.h
  backend/vulkan/command_queue_vk.cc
  backend/vulkan/command_queue_vk.h
  backend/vulkan/compute_pass_vk.cc
  backend/vulkan/compute_pass_vk.h
  backend/vulkan/compute_pipeline_vk.cc
  backend/vulkan/compute_pipeline_vk.h
  backend/vulkan/context_vk.cc
  backend/vulkan/context_vk.h
  backend/vulkan/debug_report_vk.cc
  backend/vulkan/debug_report_vk.h
  backend/vulkan/descriptor_pool_vk.cc
  backend/vulkan/descriptor_pool_vk.h
  backend/vulkan/device_buffer_vk.cc
  backend/vulkan/device_buffer_vk.h
  backend/vulkan/device_holder_vk.h
  backend/vulkan/driver_info_vk.cc
  backend/vulkan/driver_info_vk.h
  backend/vulkan/fence_waiter_vk.cc
  backend/vulkan/fence_waiter_vk.h
  backend/vulkan/formats_vk.cc
  backend/vulkan/formats_vk.h
  backend/vulkan/gpu_tracer_vk.cc
  backend/vulkan/gpu_tracer_vk.h
  backend/vulkan/pipeline_cache_data_vk.cc
  backend/vulkan/pipeline_cache_data_vk.h
  backend/vulkan/pipeline_cache_vk.cc
  backend/vulkan/pipeline_cache_vk.h
  backend/vulkan/pipeline_library_vk.cc
  backend/vulkan/pipeline_library_vk.h
  backend/vulkan/pipeline_vk.cc
  backend/vulkan/pipeline_vk.h
  backend/vulkan/queue_vk.cc
  backend/vulkan/queue_vk.h
  backend/vulkan/render_pass_builder_vk.cc
  backend/vulkan/render_pass_builder_vk.h
  backend/vulkan/render_pass_vk.cc
  backend/vulkan/render_pass_vk.h
  backend/vulkan/resource_manager_vk.cc
  backend/vulkan/resource_manager_vk.h
  backend/vulkan/sampler_library_vk.cc
  backend/vulkan/sampler_library_vk.h
  backend/vulkan/sampler_vk.cc
  backend/vulkan/sampler_vk.h
  backend/vulkan/shader_function_vk.cc
  backend/vulkan/shader_function_vk.h
  backend/vulkan/shader_library_vk.cc
  backend/vulkan/shader_library_vk.h
  backend/vulkan/shared_object_vk.cc
  backend/vulkan/shared_object_vk.h
  backend/vulkan/swapchain/khr/khr_swapchain_image_vk.cc
  backend/vulkan/swapchain/khr/khr_swapchain_image_vk.h
  backend/vulkan/swapchain/khr/khr_swapchain_impl_vk.cc
  backend/vulkan/swapchain/khr/khr_swapchain_impl_vk.h
  backend/vulkan/swapchain/khr/khr_swapchain_vk.cc
  backend/vulkan/swapchain/khr/khr_swapchain_vk.h
  backend/vulkan/swapchain/surface_vk.cc
  backend/vulkan/swapchain/surface_vk.h
  backend/vulkan/swapchain/swapchain_transients_vk.cc
  backend/vulkan/swapchain/swapchain_transients_vk.h
  backend/vulkan/swapchain/swapchain_vk.cc
  backend/vulkan/swapchain/swapchain_vk.h
  backend/vulkan/texture_source_vk.cc
  backend/vulkan/texture_source_vk.h
  backend/vulkan/texture_vk.cc
  backend/vulkan/texture_vk.h
  backend/vulkan/tracked_objects_vk.cc
  backend/vulkan/tracked_objects_vk.h
  backend/vulkan/vertex_descriptor_vk.cc
  backend/vulkan/vertex_descriptor_vk.h
  backend/vulkan/vk.h
  backend/vulkan/vma.cc
  backend/vulkan/vma.h
  backend/vulkan/workarounds_vk.cc
  backend/vulkan/workarounds_vk.h
  backend/vulkan/yuv_conversion_library_vk.cc
  backend/vulkan/yuv_conversion_library_vk.h
  backend/vulkan/yuv_conversion_vk.cc
  backend/vulkan/yuv_conversion_vk.h
)

target_link_libraries(renderer PUBLIC core)

target_include_directories(renderer PUBLIC ..)

# Vulkan
find_package(VulkanHeaders CONFIG REQUIRED)
find_package(VulkanLoader CONFIG REQUIRED)
find_package(VulkanMemoryAllocator CONFIG REQUIRED)
find_package(unofficial-vulkan-memory-allocator-hpp CONFIG REQUIRED)

target_link_libraries(renderer PUBLIC
  Vulkan::Headers
  Vulkan::Loader
  GPUOpen::VulkanMemoryAllocator
  unofficial::VulkanMemoryAllocator-Hpp::VulkanMemoryAllocator-Hpp
)
