add_library(renderer
  idle_waiter_vk.h
  blit_command.cc
  blit_command.h
  host_buffer.cc
  host_buffer.h
  command.cc
  command.h
  compute_pipeline_builder.cc
  compute_pipeline_builder.h
  compute_pipeline_descriptor.cc
  compute_pipeline_descriptor.h
  pipeline.cc
  pipeline.h
  pipeline_builder.cc
  pipeline_builder.h
  pipeline_compile_queue.cc
  pipeline_compile_queue.h
  resource_binder.cc
  resource_binder.h
  pipeline_descriptor.cc
  pipeline_descriptor.h
  pool.h
  render_target.cc
  render_target.h
  shader_key.cc
  shader_key.h
  snapshot.cc
  snapshot.h
  texture_util.cc
  texture_util.h
  vertex_buffer_builder.cc
  vertex_buffer_builder.h
  vertex_descriptor.cc
  vertex_descriptor.h
  allocator_vk.cc
  allocator_vk.h
  barrier_vk.cc
  barrier_vk.h
  blit_pass_vk.cc
  blit_pass_vk.h
  capabilities_vk.cc
  capabilities_vk.h
  command_buffer_vk.cc
  command_buffer_vk.h
  command_pool_vk.cc
  command_pool_vk.h
  command_queue_vk.cc
  command_queue_vk.h
  compute_pass_vk.cc
  compute_pass_vk.h
  compute_pipeline_vk.cc
  compute_pipeline_vk.h
  context_vk.cc
  context_vk.h
  debug_report_vk.cc
  debug_report_vk.h
  descriptor_pool_vk.cc
  descriptor_pool_vk.h
  device_buffer_vk.cc
  device_buffer_vk.h
  device_holder_vk.h
  driver_info_vk.cc
  driver_info_vk.h
  fence_waiter_vk.cc
  fence_waiter_vk.h
  formats_vk.cc
  formats_vk.h
  gpu_tracer_vk.cc
  gpu_tracer_vk.h
  pipeline_cache_data_vk.cc
  pipeline_cache_data_vk.h
  pipeline_cache_vk.cc
  pipeline_cache_vk.h
  pipeline_library_vk.cc
  pipeline_library_vk.h
  pipeline_vk.cc
  pipeline_vk.h
  queue_vk.cc
  queue_vk.h
  render_pass_builder_vk.cc
  render_pass_builder_vk.h
  render_pass_vk.cc
  render_pass_vk.h
  resource_manager_vk.cc
  resource_manager_vk.h
  sampler_library_vk.cc
  sampler_library_vk.h
  sampler_vk.cc
  sampler_vk.h
  shader_function_vk.cc
  shader_function_vk.h
  shader_library_vk.cc
  shader_library_vk.h
  shared_object_vk.cc
  shared_object_vk.h
  swapchain/khr/khr_swapchain_image_vk.cc
  swapchain/khr/khr_swapchain_image_vk.h
  swapchain/khr/khr_swapchain_impl_vk.cc
  swapchain/khr/khr_swapchain_impl_vk.h
  swapchain/khr/khr_swapchain_vk.cc
  swapchain/khr/khr_swapchain_vk.h
  swapchain/surface_vk.cc
  swapchain/surface_vk.h
  swapchain/swapchain_transients_vk.cc
  swapchain/swapchain_transients_vk.h
  swapchain/swapchain_vk.cc
  swapchain/swapchain_vk.h
  texture_source_vk.cc
  texture_source_vk.h
  texture_vk.cc
  texture_vk.h
  tracked_objects_vk.cc
  tracked_objects_vk.h
  vertex_descriptor_vk.cc
  vertex_descriptor_vk.h
  vk.h
  vma.cc
  vma.h
  workarounds_vk.cc
  workarounds_vk.h
  yuv_conversion_library_vk.cc
  yuv_conversion_library_vk.h
  yuv_conversion_vk.cc
  yuv_conversion_vk.h
)

target_link_libraries(renderer PUBLIC core)

target_include_directories(renderer PUBLIC ..)

# Vulkan
find_package(VulkanHeaders CONFIG REQUIRED)
find_package(VulkanLoader CONFIG REQUIRED)
find_package(VulkanMemoryAllocator CONFIG REQUIRED)
find_package(unofficial-vulkan-memory-allocator-hpp CONFIG REQUIRED)

target_link_libraries(renderer PUBLIC
  Vulkan::Headers
  Vulkan::Loader
  GPUOpen::VulkanMemoryAllocator
  unofficial::VulkanMemoryAllocator-Hpp::VulkanMemoryAllocator-Hpp
)
